bugfix: The border is misaligned when the table is scrolled
as pointed out in https://github.com/handsontable/handsontable/pull/6157#issuecomment-532590558

The problem was in CSS classes that were added to HOT containers *after* the borders are rendered. I needed to change the border rendering function to be called later. Also, I reinforced the WOT tests by making it test this troublesome behavior.

--- a/src/3rdparty/walkontable/css/walkontable.css
+++ b/src/3rdparty/walkontable/css/walkontable.css
@@ -89,7 +89,15 @@
   border-top: 1px solid #CCC;
 }
 
-.wtHolder thead tr:last-child th {
+.ht_master:not(.innerBorderLeft):not(.emptyColumns) ~ .handsontable tbody tr th,
+.ht_master:not(.innerBorderLeft):not(.emptyColumns) ~ .handsontable:not(.ht_clone_top) thead tr th:first-child {
+  border-right-width: 0;
+}
+
+.ht_master:not(.innerBorderTop) thead tr:last-child th,
+.ht_master:not(.innerBorderTop) ~ .handsontable thead tr:last-child th,
+.ht_master:not(.innerBorderTop) thead tr.lastChild th,
+.ht_master:not(.innerBorderTop) ~ .handsontable thead tr.lastChild th {
   border-bottom-width: 0;
 }
 
